# cxxlib-template

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.template.txt  LICENSE.txt  init.pl
cmake/: !@Project.Name@Config.cmake.in  dependencies.cmake  utils.cmake  warnings.cmake
inc/: CMakeLists.txt
src/: CMakeLists.txt  dummy.cxx
test/: CMakeLists.txt  main.test.cxx
